Correct img align center.
Hello Johnny...

--- a/html/assets/css/niobe_main.css
+++ b/html/assets/css/niobe_main.css
@@ -37,8 +37,10 @@ a:focus {
 
 img {
 	-webkit-backface-visibility: hidden;
+    display: flex;
 	height: auto;
-	max-width: 100%;
+    margin: auto;
+	max-width: 100%;  
 }
 .video {
     align: center;
