--- a/html/assets/scss/niobe_style.scss
+++ b/html/assets/scss/niobe_style.scss
@@ -137,10 +137,10 @@
 
 #intro {
     img {
+        display: flex;
         height: 260px;
         left: 50%;
-        margin-left: -130px;
-        margin-top: -130px;
+        margin:auto;
         position: absolute;
         top: 50%;
         width: 260px;
